src/org/api/core/1.3.15/core.imessagequeue.md
---
title: "IMessageQueue interface · @imqueue/core"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/1.3.15/) &gt; [IMessageQueue](/api/core/1.3.15/core.imessagequeue/)

## IMessageQueue interface

Generic messaging queue implementation interface

**Signature:**

```typescript
export interface IMessageQueue extends EventEmitter 
```
**Extends:** EventEmitter

## Example

\~\~\~typescript import { IMessageQueue, EventEmitter, uuid } from '<!-- -->@<!-- -->imqueue/core';

class SomeMQAdapter implements IMessageQueue extends EventEmitter { public async start(): Promise<SomeMQAdapter> { // ... implementation goes here return this; } public async stop(): Promise<SomeMQAdapter> { // ... implementation goes here return this; } public async send( toQueue: string, message: IJson, delay?: number ): Promise<string> { const messageId = uuid(); // ... implementation goes here return messageId; } public async destroy(): Promise<void> { // ... implementation goes here } public async clear(): Promise<SomeMQAdapter> { // ... implementation goes here return this; } } \~\~\~

## Methods

<table><thead><tr><th>

Method


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[clear()](/api/core/1.3.15/core.imessagequeue.clear/)


</td><td>

Clears queue data in queue host application. Supposed to be an async function.


</td></tr>
<tr><td>

[destroy()](/api/core/1.3.15/core.imessagequeue.destroy/)


</td><td>

Safely destroys current queue, unregistered all set event listeners and connections. Supposed to be an async function.


</td></tr>
<tr><td>

[send(toQueue, message, delay, errorHandler)](/api/core/1.3.15/core.imessagequeue.send/)


</td><td>

Sends a message to given queue name with the given data. Supposed to be an async function.


</td></tr>
<tr><td>

[start()](/api/core/1.3.15/core.imessagequeue.start/)


</td><td>

Starts the messaging queue. Supposed to be an async function.


</td></tr>
<tr><td>

[stop()](/api/core/1.3.15/core.imessagequeue.stop/)


</td><td>

Stops the queue (should stop handle queue messages). Supposed to be an async function.


</td></tr>
</tbody></table>

